--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,59 @@
         tools:layout_editor_absoluteY="16dp"
         tools:listitem="@layout/post_card" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/edit_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="edit_pencil, edit_constant, edit_preview, edit_cancel"
+        android:visibility="invisible"/>
+
+    <ImageView
+        android:id="@+id/edit_pencil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_edit_24"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@id/content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/white" />
+
+    <TextView
+        android:id="@+id/edit_constant"
+        android:layout_width="0dp"
+        android:layout_height="16dp"
+        android:text="@string/edit_constant"
+        android:textAlignment="textStart"
+        android:textColor="#00aaff"
+        android:background="@android:color/white"
+        app:layout_constraintStart_toEndOf="@+id/edit_pencil"
+        app:layout_constraintTop_toTopOf="@id/edit_pencil"
+        app:layout_constraintEnd_toStartOf="@id/edit_cancel"/>
+
+    <TextView
+        android:id="@+id/edit_preview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Привет, это новая..."
+        android:padding="2dp"
+        app:layout_constraintTop_toBottomOf="@id/edit_constant"
+        app:layout_constraintStart_toEndOf="@id/edit_pencil"
+        app:layout_constraintBottom_toTopOf="@id/content"
+        app:layout_constraintEnd_toStartOf="@id/edit_cancel"
+        android:background="@android:color/white" />
+
+    <ImageView
+        android:id="@+id/edit_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:src="@drawable/baseline_close_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/content"
+        app:layout_constraintTop_toTopOf="@id/edit_constant"
+        android:background="@android:color/white"
+        />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier_bottom"
         android:layout_width="wrap_content"
