--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -64,23 +64,19 @@ android:padding="16dp">
     tools:text="@sample/posts.json/data/content"
     app:layout_constraintTop_toBottomOf="@id/barrier" />
 
-<ImageView
+<com.google.android.material.button.MaterialButton
     android:id="@+id/liked"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/common_spacing"
-    app:layout_constraintTop_toBottomOf="@id/content"
-    android:src="@drawable/baseline_favorite_border_24" />
-
-<TextView
-    android:id="@+id/liked_count"
-    android:layout_width="wrap_content"
-    android:minWidth="30dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/common_spacing"
-    app:layout_constraintTop_toBottomOf="@id/content"
-    app:layout_constraintStart_toEndOf="@id/liked"
-    android:text="@string/liked_count" />
+    android:checkable="true"
+    android:button="@drawable/ic_like_selector"
+    app:icon="@drawable/ic_like_selector"
+    style="@style/App.Widget.LikeButton"
+    android:text="@string/liked_count"
+    android:layout_margin="@dimen/tiny_spacing"
+    app:iconPadding="0dp"
+    app:iconSize="24dp"
+    app:layout_constraintTop_toBottomOf="@id/content"/>
 
 <ImageView
     android:id="@+id/share"
@@ -88,7 +84,7 @@ android:padding="16dp">
     android:layout_height="wrap_content"
     android:src="@drawable/baseline_share_24"
     app:layout_constraintTop_toBottomOf="@id/content"
-    app:layout_constraintStart_toEndOf="@id/liked_count"
+    app:layout_constraintStart_toEndOf="@id/liked"
     android:layout_margin="@dimen/common_spacing" />
 
 <TextView
