--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -40,14 +40,15 @@ android:padding="16dp">
     app:layout_constraintStart_toEndOf="@id/imageView"
     app:layout_constraintTop_toBottomOf="@id/author" />
 
-<ImageButton
+<Button
     android:id="@+id/menu"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
+    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+    app:icon="@drawable/ic_menu_selector"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/imageView"
-    app:srcCompat="@drawable/baseline_more_vert_24" />
+    app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 <androidx.constraintlayout.widget.Barrier
     android:id="@+id/barrier"
