--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/post_card" />
 
@@ -29,7 +29,6 @@
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_24"
         android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@id/content"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@android:color/white" />
 
@@ -53,7 +52,6 @@
         android:padding="2dp"
         app:layout_constraintTop_toBottomOf="@id/edit_constant"
         app:layout_constraintStart_toEndOf="@id/edit_pencil"
-        app:layout_constraintBottom_toTopOf="@id/content"
         app:layout_constraintEnd_toStartOf="@id/edit_cancel"
         android:background="@android:color/white" />
 
@@ -64,42 +62,19 @@
         android:padding="8dp"
         android:src="@drawable/baseline_close_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/content"
         app:layout_constraintTop_toTopOf="@id/edit_constant"
         android:background="@android:color/white"
         />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_bottom"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/main"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="content, add"/>
-
-    <EditText
-        android:id="@+id/content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:hint="post text"
-        android:maxLines="6"
-        android:background="@android:color/white"
-        app:layout_constraintStart_toStartOf="@id/main"
-        app:layout_constraintBottom_toBottomOf="@id/main"
-        app:layout_constraintEnd_toStartOf="@id/add"
-        android:inputType="textMultiLine"
-        android:importantForAutofill="no"/>
-    
-    <ImageButton
-        android:id="@+id/add"
-        android:src="@drawable/baseline_check_circle_outline_24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/main"
-        android:background="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@id/main"/>
-    
+        app:srcCompat="@drawable/baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="@dimen/common_spacing"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
