--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -65,6 +65,35 @@ android:padding="16dp">
     tools:text="@sample/posts.json/data/content"
     app:layout_constraintTop_toBottomOf="@id/barrier" />
 
+ <androidx.constraintlayout.widget.Group
+     android:id="@+id/edit_group"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     app:constraint_referenced_ids="video, video_description"
+     android:visibility="gone"/>
+
+ <ImageView
+     android:id="@+id/video"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     app:layout_constraintTop_toBottomOf="@id/content"
+     android:src="@drawable/dummy_video"/>
+
+ <TextView
+     android:id="@+id/video_description"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="Описание видео"
+     app:layout_constraintTop_toBottomOf="@id/video" />
+
+ <androidx.constraintlayout.widget.Barrier
+     android:id="@+id/video_barrier"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     app:barrierDirection="bottom"
+     app:constraint_referenced_ids="video, video_description"/>
+
+
 <com.google.android.material.button.MaterialButton
     android:id="@+id/liked"
     android:layout_width="wrap_content"
@@ -77,7 +106,7 @@ android:padding="16dp">
     android:layout_margin="@dimen/tiny_spacing"
     app:iconPadding="0dp"
     app:iconSize="24dp"
-    app:layout_constraintTop_toBottomOf="@id/content"/>
+    app:layout_constraintTop_toBottomOf="@id/video_barrier"/>
 
 <com.google.android.material.button.MaterialButton
     android:id="@+id/share"
@@ -88,7 +117,7 @@ android:padding="16dp">
     app:icon="@drawable/ic_share_celector"
     app:iconSize="24dp"
     android:text="@string/share_count"
-    app:layout_constraintTop_toBottomOf="@id/content"
+    app:layout_constraintTop_toBottomOf="@id/video_barrier"
     app:layout_constraintStart_toEndOf="@id/liked"
     android:layout_margin="@dimen/tiny_spacing" />
 
@@ -98,7 +127,7 @@ android:padding="16dp">
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginTop="@dimen/common_spacing"
-    app:layout_constraintTop_toBottomOf="@id/content"
+    app:layout_constraintTop_toBottomOf="@id/video_barrier"
     app:layout_constraintEnd_toStartOf="@id/view_count"
     android:src="@drawable/baseline_remove_red_eye_24" />
 
@@ -108,7 +137,7 @@ android:padding="16dp">
     android:minWidth="30dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/common_spacing"
-    app:layout_constraintTop_toBottomOf="@id/content"
+    app:layout_constraintTop_toBottomOf="@id/video_barrier"
     app:layout_constraintEnd_toEndOf="parent"
     android:text="@string/view_count" />
 
