--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -66,10 +66,10 @@ android:padding="16dp">
     app:layout_constraintTop_toBottomOf="@id/barrier" />
 
  <androidx.constraintlayout.widget.Group
-     android:id="@+id/edit_group"
+     android:id="@+id/video_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
-     app:constraint_referenced_ids="video, video_description"
+     app:constraint_referenced_ids="video, video_description, video_button"
      android:visibility="gone"/>
 
  <ImageView
@@ -78,6 +78,17 @@ android:padding="16dp">
      android:layout_height="match_parent"
      app:layout_constraintTop_toBottomOf="@id/content"
      android:src="@drawable/dummy_video"/>
+
+ <ImageButton
+     android:id="@+id/video_button"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:src="@drawable/baseline_play_circle_outline_48"
+     app:layout_constraintStart_toStartOf="@id/video"
+     app:layout_constraintTop_toTopOf="@+id/video"
+     app:layout_constraintEnd_toEndOf="@id/video"
+     app:layout_constraintBottom_toBottomOf="@id/video"
+     />
 
  <TextView
      android:id="@+id/video_description"
@@ -91,7 +102,7 @@ android:padding="16dp">
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
-     app:constraint_referenced_ids="video, video_description"/>
+     app:constraint_referenced_ids="video, video_description, video_button"/>
 
 
 <com.google.android.material.button.MaterialButton
