добился воспроизведения видео через интент

--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -88,6 +88,7 @@ android:padding="16dp">
      app:layout_constraintTop_toTopOf="@+id/video"
      app:layout_constraintEnd_toEndOf="@id/video"
      app:layout_constraintBottom_toBottomOf="@id/video"
+     android:background="@android:color/transparent"
      />
 
  <TextView
