--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.IntentHandlerActivity">
+    tools:context=".activity.NewPostFragment">
 
     <EditText
         android:id="@+id/content"
